# mdbook-i18n-helpers

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  USAGE.md  dprint.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: coverage-report.yml  release.yml  test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gettext.rs  group_events.rs  normalize.rs  xgettext.rs
fuzz/src/: lib.rs
i18n-book-to-po/: Cargo.toml  de.po
i18n-book-to-po/src/: catalog.rs  file_map.rs  lib.rs  main.rs
i18n-book-to-po/src/structure/: align.rs  diff.rs  mod.rs  types.rs
i18n-book-to-po/testcases/original/: introduction.md
i18n-book-to-po/testcases/translation/: introduction.md
i18n-helpers/: CHANGELOG.md  Cargo.toml  README.md  USAGE.md
i18n-helpers/fuzz/: Cargo.toml
i18n-helpers/fuzz/fuzz_targets/: gettext.rs  group_events.rs  normalize.rs
i18n-helpers/fuzz/src/: lib.rs
i18n-helpers/src/: directives.rs  gettext.rs  lib.rs  normalize.rs  preprocessors.rs  renderers.rs  xgettext.rs
i18n-helpers/src/preprocessors/: gettext.rs
i18n-helpers/src/renderers/: xgettext.rs
i18n-helpers/src/xgettext/: paths.rs
i18n-helpers/templates/: report.html
i18n-report/: CHANGELOG.md  Cargo.toml  README.md
i18n-report/src/: main.rs  stats.rs
i18n-report/templates/: report.html
mdbook-tera-backend/: Cargo.toml  README.md
mdbook-tera-backend/src/: main.rs  tera_renderer.rs
mdbook-tera-backend/src/tera_renderer/: custom_component.rs  error.rs  mod.rs  renderer.rs
src/: lib.rs  normalize.rs
