[workspace]
members = ["i18n-helpers", "i18n-report", "mdbook-tera-backend", "fuzz"]
default-members = ["i18n-helpers", "i18n-report", "mdbook-tera-backend"]
resolver = "2"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
anyhow = "1.0.96"
mdbook = { version = "0.4.45", default-features = false }
polib = "0.2.0"
pretty_assertions = "1.4.1"
serde_json = "1.0.139"
tempfile = "3.19.1"
