[workspace]
members = ["i18n-helpers", "i18n-report", "mdbook-tera-backend", "fuzz"]
default-members = ["i18n-helpers", "i18n-report", "mdbook-tera-backend"]
resolver = "2"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
mdbook-driver = "0.5.2"
mdbook-preprocessor = "0.5.2"
mdbook-renderer = "0.5.2"
polib = "0.3.0"
pretty_assertions = "1.4.1"
serde_json = "1.0.149"
tempfile = "3.24.0"
