[package]
name = "mdbook-i18n-helpers-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4.10"
mdbook.workspace = true
mdbook-i18n-helpers = { path = "../i18n-helpers" }
polib.workspace = true
pretty_assertions.workspace = true

[[bin]]
name = "group_events"
path = "fuzz_targets/group_events.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize"
path = "fuzz_targets/normalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gettext"
path = "fuzz_targets/gettext.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xgettext"
path = "fuzz_targets/xgettext.rs"
test = false
doc = false
bench = false
