[package]
name = "mdbook-tera-backend"
version = "0.0.1"
authors = ["Martin Geisler <mgeisler@google.com>", "Alexandre Senges <asenges@google.com>"]
categories = ["template-engine"]
edition = "2021"
keywords = ["mdbook", "tera", "renderer", "template"]
license = "Apache-2.0"
repository = "https://github.com/google/mdbook-i18n-helpers"
description = "Plugin to extend mdbook with Tera templates and custom HTML components."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mdbook.workspace = true
serde = "1.0"
serde_json.workspace = true
tera = "1.20.0"

[dev-dependencies]
tempfile.workspace = true
