[package]
name = "mdbook-tera-backend"
version = "0.0.2"
authors = ["Martin Geisler <mgeisler@google.com>", "Alexandre Senges <asenges@google.com>"]
categories = ["template-engine"]
edition = "2021"
keywords = ["mdbook", "tera", "renderer", "template"]
license = "Apache-2.0"
repository = "https://github.com/google/mdbook-i18n-helpers"
description = "Plugin to extend mdbook with Tera templates and custom HTML components."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mdbook-renderer.workspace = true
serde = "1.0"
tera = "1.20.1"

[dev-dependencies]
mdbook-driver.workspace = true
tempfile.workspace = true
